kubernetes/apps/matrix/synapse/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse
  namespace: matrix
  labels:
    route.scope: external
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Matrix
      url: "https://matrix.erinko.fi/health"
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
      sectionName: https-erinko
  hostnames:
    - matrix.erinko.fi
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: synapse-app
          port: 8008
